[package]
edition = "2021"
name = "home-socket"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
serde = { version = "1", features = ["derive"] }
socketioxide = "0.8"
tokio = {version = "1", features = ["full"]}
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
